; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/powerplay/smumgr/extr_smu8_smumgr.c_smu8_smu_initialize_toc_empty_job_list.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/powerplay/smumgr/extr_smu8_smumgr.c_smu8_smu_initialize_toc_empty_job_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pp_hwmgr = type { %struct.smu8_smumgr* }
%struct.smu8_smumgr = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }
%struct.TOC = type { i64* }

@NUM_JOBLIST_ENTRIES = common dso_local global i32 0, align 4
@IGNORE_JOB = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pp_hwmgr*)* @smu8_smu_initialize_toc_empty_job_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @smu8_smu_initialize_toc_empty_job_list(%struct.pp_hwmgr* %0) #0 {
  %2 = alloca %struct.pp_hwmgr*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.smu8_smumgr*, align 8
  %5 = alloca %struct.TOC*, align 8
  store %struct.pp_hwmgr* %0, %struct.pp_hwmgr** %2, align 8
  %6 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %2, align 8
  %7 = getelementptr inbounds %struct.pp_hwmgr, %struct.pp_hwmgr* %6, i32 0, i32 0
  %8 = load %struct.smu8_smumgr*, %struct.smu8_smumgr** %7, align 8
  store %struct.smu8_smumgr* %8, %struct.smu8_smumgr** %4, align 8
  %9 = load %struct.smu8_smumgr*, %struct.smu8_smumgr** %4, align 8
  %10 = getelementptr inbounds %struct.smu8_smumgr, %struct.smu8_smumgr* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = inttoptr i64 %12 to %struct.TOC*
  store %struct.TOC* %13, %struct.TOC** %5, align 8
  store i32 0, i32* %3, align 4
  br label %14

14:                                               ; preds = %26, %1
  %15 = load i32, i32* %3, align 4
  %16 = load i32, i32* @NUM_JOBLIST_ENTRIES, align 4
  %17 = icmp slt i32 %15, %16
  br i1 %17, label %18, label %29

18:                                               ; preds = %14
  %19 = load i64, i64* @IGNORE_JOB, align 8
  %20 = load %struct.TOC*, %struct.TOC** %5, align 8
  %21 = getelementptr inbounds %struct.TOC, %struct.TOC* %20, i32 0, i32 0
  %22 = load i64*, i64** %21, align 8
  %23 = load i32, i32* %3, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds i64, i64* %22, i64 %24
  store i64 %19, i64* %25, align 8
  br label %26

26:                                               ; preds = %18
  %27 = load i32, i32* %3, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %3, align 4
  br label %14

29:                                               ; preds = %14
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
